# nonebot-adapter-afdian

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: codecov.yml  release.yml
nonebot/adapters/afdian/: __init__.py  adapter.py  bot.py  config.py  event.py  exception.py  message.py  payload.py  utils.py
tests/: conftest.py  test_config.py  test_event.py  test_webhook.py
