[tool.poetry]
name = "nonebot-adapter-afdian"
version = "0.0.1"
description = "爱发电适配器"
authors = ["17TheWord <17theword@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "nonebot" }]

[tool.poetry.dependencies]
python = "^3.10"
nonebot2 = "^2.2.0"
pydantic = ">=1.10.0,<3.0.0,!=2.5.0,!=2.5.1"

[tool.poetry.group.test.dependencies]
ruff = "^0.5.0"
isort = "^5.10.1"
nonebug = "^0.3.5"
pytest-cov = "^4.0.0"
pre-commit = "^3.7.0"
pytest-asyncio = "^0.23.0"
nonebot2 = { version = "^2.2.0", extras = ["fastapi"] }

[tool.pytest.ini_options]
addopts = "--cov=nonebot/adapters/afdian --cov-report term-missing"

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
ignore = []

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.data.packages]
my_package = { path = "nonebot/adapters/afdian" }
