[project]
name = "nonebot-adapter-afdian"
version = "0.1.7"
description = "爱发电适配器"
authors = [{ name = "17TheWord", email = "17theword@gmail.com" }]
requires-python = ">=3.10, <4"
readme = "README.md"
license = "MIT"
dependencies = [
    "pydantic>=1.10.0,<3.0.0,!=2.5.0,!=2.5.1",
    "nonebot2[fastapi, httpx]>=2.4.2,<3",
]

[dependency-groups]
dev = ["pre-commit>=4.0.0,<5", "nonebot2[fastapi, httpx, websockets]>=2.2.0,<3"]

lint = ["ruff>=0.12.4,<0.13", "pre-commit>=4.2.0,<5"]

test = [
    "nonebug>=0.4.3,<0.5",
    "pytest>=8.4.2",
    "pytest-cov>=6.2.1,<7",
    "pytest-asyncio>=1.1.0,<2",
]

[tool.nonebot]
adapters = [{ name = "Afdian", module_name = "nonebot.adapters.afdian" }]
plugins = []
plugin_dirs = []
builtin_plugins = []

[tool.hatch.build.targets.sdist]
include = ["nonebot"]

[tool.hatch.build.targets.wheel]
include = ["nonebot"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev", "test", "lint"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
addopts = "--cov=nonebot/adapters/afdian --cov-report term-missing"
filterwarnings = ["ignore:Setting per-request cookies=.*:DeprecationWarning"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "E",     # pycodestyle errors
    "I",     # isort
    "UP",    # pyupgrade
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "T10",   # flake8-debugger
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E402",
    "E501",   # module-import-not-at-top-of-file
    "UP037",  # quoted-annotation
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
    "RUF006", # ambiguous-unicode-character-assignment
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.isort]
force-sort-within-sections = true
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.data.packages]
my_package = { path = "nonebot/adapters/afdian" }
